--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/map"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:id="@+id/drawer_layout"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:fitsSystemWindows="true"
+tools:openDrawer="start">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    class="com.amap.api.maps.SupportMapFragment" />
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:animateLayoutChanges="true"
+    android:background="#F9F9F9"
+    android:orientation="vertical"
+    tools:context=".MainActivity"/>
+    <RelativeLayout
+        android:orientation="vertical"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <fragment
+        android:layout_height="match_parent"
+        android:layout_width="match_parent" class="com.amap.api.maps.SupportMapFragment"
+        android:id="@+id/map"/>
+
+
+    <RelativeLayout
+        android:layout_height="48dp"
+        android:layout_width="match_parent"
+        android:background="@color/white"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginLeft="20dp">
+
+    <ImageView
+        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:id="@+id/clean_keywords"
+        android:layout_marginRight="10dp"
+        android:visibility="gone"
+        android:src="@mipmap/ic_close"
+        android:layout_alignParentRight="true"/>
+
+    <TextView
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:id="@+id/main_keywords"
+        android:textSize="20.0sp"
+        android:textColorHint="@color/text_hint"
+        android:textColor="#000000"
+        android:singleLine="true"
+        android:paddingLeft="20dp"
+        android:maxLength="20"
+        android:inputType="text|textAutoComplete"
+        android:imeOptions="actionDone"
+        android:hint="搜索地点"
+        android:gravity="center_vertical"
+        android:dropDownVerticalOffset="2.0dip"
+        android:drawableLeft="@mipmap/ic_search"
+        android:completionThreshold="1"
+        android:clickable="true"
+        android:layout_toLeftOf="@+id/clean_keywords"/>
+
+</RelativeLayout>
+
+</RelativeLayout>
+<!--<include-->
+    <!--layout="@layout/app_bar_main"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent" />-->
+
+<android.support.design.widget.NavigationView
+    android:id="@+id/nav_view"
+    android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+    android:layout_gravity="start"
+    android:fitsSystemWindows="true"
+    app:headerLayout="@layout/nav_header_main"
+    app:menu="@menu/activity_main_drawer" />
+
+</android.support.v4.widget.DrawerLayout>
