--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,11 @@
 
     <color name="fill">#3376d4f3</color>
     <color name="stroke">#cc3f91fc</color>
+    <color name="darkgrey"> #C0C0C0</color>
+
+    <color name="grey"> #ebebeb</color>
+
+    <color name="white">#FFF</color>
+
+    <color name="text_hint">#6C6C6C</color>
 </resources>
