--- a/app/src/main/res/layout/activity_navigation_intime.xml
+++ b/app/src/main/res/layout/activity_navigation_intime.xml
@@ -5,10 +5,9 @@
     android:orientation="vertical">
 
     <com.amap.api.navi.AMapNaviView
-        android:id="@+id/`/*\
-        I\navi_view"
+        android:id="@+id/navi_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         />
 
-</RelativeLayout> ]=7['6[P;5OL
+</RelativeLayout>
