--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -24,7 +24,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="李高正"
+        android:id="@+id/myName"
+        android:text="usernamne"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
